# DeeplabV3plus_ros

./: .gitattributes  README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: test_pytorch.pc
devel/lib/test_pytorch/: example-app
devel/share/test_pytorch/cmake/: test_pytorchConfig.cmake
src/test_pytorch/: CMakeLists.txt  package.xml
src/test_pytorch/src/: example-app.cpp
